# sonic-pi

./: .gitignore  CMakeLists.txt  Gemfile  INSTALL-LINUX.md
app/server/ruby/: Gemfile  core.rb
cmake/: FindQScintilla2.cmake  FindQwt.cmake
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
gui/images/: tutorial
lib/: types.rb
scheduler/: CMakeLists.txt
server/: CMakeLists.txt  core.rb
server/lib/sonicpi/: util.rb
tools/: i18n-tool.rb  qt-doc.rb
